# OpenProgram

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_DRAFT.md  _gen_lobe_slugs.ps1  _timing.py  llm_distillation_research_update_2026-04-18.md  pyproject.toml  requirements.txt
.agent_cron_test/: cron_ping.sh  crontab.before.err  crontab.current
.agent_tmp/: ocr.swift
.cron-test/: crontab.new  crontab.tmp-target  tmp-log-captured.txt
.github/workflows/: ci.yml  windows-install-smoke.yml
.superpowers/sdd/: followup-fix-report.md  split-task-4-report.md
agentic/: __init__.py  cli.py  context.py  function.py  meta_function.py  runtime.py
agentic/apps/: mini_lesson.py
agentic/functions/: build_catalog.py  prepare_args.py  sentiment.py  word_count.py
agentic/mcp/: __init__.py  __main__.py  server.py
agentic/meta_functions/: __init__.py  _helpers.py  create.md  create.py  create_app.py  create_skill.py  fix.py  improve.py
agentic/providers/: __init__.py  anthropic.py  claude_code.py  codex.py  gemini.py  gemini_cli.py  openai.py
agentic/visualize/: programs_meta.json  server.py
agentic/web/: _runtime_mgmt.py  server.py
cli/: package-lock.json  package.json  vitest.config.ts
cli/src/: index.tsx
cli/tests/: bottomBar.test.tsx  claudeAccounts.test.tsx  fileCompletions.test.ts  handler.test.ts  providerAccounts.test.tsx  questionDecision.test.ts  replLayout.test.ts  theme.test.ts  transcriptViewport.test.ts  turn.test.tsx  welcome.test.tsx  welcomeLayout.test.ts
desktop/: README.md  browsing-history-store.js  main.js  package-lock.json  package.json  preload.js  tab-transfer-store.js
desktop/scripts/: build-icon.sh  check-icon.sh  check-tab-transfer-store.js  check-webtab-navigation.js
docs/: API.md  CONTEXT-v2.md  CONTEXT-v3.md  CONTEXT.md  DESIGN.md  GETTING_STARTED.en.md  GETTING_STARTED.md  INTEGRATION_CLAUDE_CODE.en.md  INTEGRATION_CLAUDE_CODE.md  README.en.md  README.md  README.zh.md  README_CN.en.md  README_CN.md  features.en.md  features.md  install.en.md  install.md  installing-harnesses.en.md  installing-harnesses.md  troubleshooting.en.md  troubleshooting.md
docs/_site/: API.en.html  API.html  GETTING_STARTED.en.html  GETTING_STARTED.html  INTEGRATION_CLAUDE_CODE.en.html  INTEGRATION_CLAUDE_CODE.html  INTEGRATION_OPENCLAW.en.html  INTEGRATION_OPENCLAW.html  README.en.html  README.html  README_CN.en.html  README_CN.html  features.en.html  features.html  index.html  install.en.html  install.html  installing-harnesses.en.html  installing-harnesses.html  provider-token-tracking.en.html  provider-token-tracking.html  search-index.json  troubleshooting.en.html  troubleshooting.html
docs/agentic-programming/: README.en.md  README.md  code-call.md  function-metadata.md  function-metadata.zh.md  tool-calling.md
docs/api/: agentic-function.en.md  agentic-function.md  agentic_function.md  context.md  functions.md  meta_function.md  providers.en.md  providers.md  runtime.md
docs/archive/: 01-full-tree.mmd  02-depth-1.mmd  03-include-specific.mmd  04-branch-select.mmd  05-isolated.mmd  06-new-tree.mmd  ENGINEERING.md  PRACTICE.md  README.md  README_DRAFT.md  context-README.md
docs/capabilities/: README.md  README.zh.md  installing-harnesses.md  installing-harnesses.zh.md  mcp.md  mcp.zh.md  plugins.md  plugins.zh.md  skills.md  skills.zh.md  tools.md  tools.zh.md
docs/context/: 07-path-addressing.mmd  README.md
docs/design/: README.en.md  README.md  TODO-doc-code-gaps.en.md  TODO-doc-code-gaps.md  agent-worktree.md  async-task-lifecycle.md  channel-audit.md  channel-design.md  claude-code-meridian-profile.md  cli-redesign.md  context-attach-merge.md  context-commit-chain.html  context-commit-chain.md  context-commit-demo.html  context-snapshot-chain.md  dag-as-memory-unified.md  dag-edge-split.md  design-implementation-audit.md  docs-site.en.md  docs-site.md  drop-run-command.md  error-and-timeout-mechanism.html  git-as-entity-memory.md  gui-agent-context.md  harness-standard.md  indicator-dots.md  mcp-integration.md  memory-v2.md  memory.md  model-catalog-final.md  multi-agent-revert-todo.md  ports.md  revert-layers.md  runtime.md  slash-commands.md  streaming-resume.md  surface-system.md  unified-account-management.md  unified-session-context.md  usage-metering.en.md  (+1 more)
docs/images/: README.md  _gifview.html
docs/install/: install.en.md  install.md  install.zh.md  profiles.md  profiles.zh.md  upgrade.md  upgrade.zh.md
docs/integrations/: claude-code.md  claude-code.zh.md  openclaw.en.md  openclaw.md  openclaw.zh.md
docs/interfaces/: README.md  README.zh.md  cli.md  cli.zh.md  tui.md  tui.zh.md  web.md  web.zh.md
docs/models/: README.md  README.zh.md  auth.md  auth.zh.md  fast-tier.md  providers.md  (+6 more)
examples/: claude_demo.py  code_review.py  data_analysis.py  gui_automation.py  main.py  meta_chain.py  meta_demo.py  openclaw_routing.py  quickstart.py
harness/: __init__.py
openprogram/: __init__.py  __main__.py  _compat.py  _ports.py  cli.py  cli_chat.py  cli_ink.py  config_schema.py  paths.py  setup.py  setup_wizard.py  tts.py
scripts/: gen_dir_readmes.py  install.ps1  install.sh  migrate_split_caller_edge.py  probe_thinking_caps.py  promote_stable.sh  repair_conv_predecessors.py  smoke_entity_layer.py  smoke_programs_watcher.py  smoke_read_before_edit.py  smoke_revert_ux.py  smoke_third_party_harness.py  verify_claude_max_e2e.py  verify_dag_e2e.py
skill/: SKILL.md
tests/: conftest 2.bak  conftest.py  test_async.py  test_chain.py  test_context.py  test_context_roundtrip.py  test_error_recovery.py  test_function.py  test_http_proxy.py  test_memory.py  test_meta.py  test_programmer.py  test_provider_anthropic.py  test_provider_cli.py  test_provider_detection.py  test_provider_gemini.py  test_provider_openai.py  test_providers.py  test_public_api.py  test_recovery.py  test_runtime.py  test_scope_session.py  test_session.py  test_step.py  test_workflow.py
tools/: dag_dump.py
web/: MIGRATION.md  MIGRATION_PLAN.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+2450 files in other folders)
