[build-system]
requires = ["setuptools>=68,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openprogram"
version = "0.4.0"
description = "The Open Source Agent Harness Framework. Any LLM. Any platform. Agentic Programming Paradigm."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fzkuji"},
]
keywords = ["llm", "agentic", "agentic-programming", "ai", "function", "decorator", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Used by `openprogram providers setup` / `login` for an interactive
    # arrow-key menu. Falls back to plain input() when not installed,
    # so this is officially optional — installing openprogram without
    # extras still works, just with a flatter prompt.
    "questionary>=2.0.0",
    # TUI for `openprogram` — Textual drives the full-screen chat
    # interface (sidebar + scrollback + command palette). Falls
    # through to the Rich-based REPL when TUI is unavailable.
    "textual>=0.80",
    # Web UI is a first-class entry point alongside the TUI (the
    # whole platform pitch is "TUI or browser, same backend"), so the
    # FastAPI/uvicorn/websockets stack ships with the core package
    # instead of being a `[web]` extra. Keeps `pip install openprogram`
    # a single line on the landing page.
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
anthropic = [
    "anthropic>=0.30.0",
]
openai = [
    "openai>=1.30.0",
]
gemini = [
    "google-genai>=1.0.0",
]
# Back-compat alias — the web stack moved into base `dependencies`
# above. Keeping these extras as empty markers so existing
# `pip install "openprogram[web]"` / `[visualize]` lines in the wild
# don't break, they just no-op.
web = []
visualize = []
# GUI-Agent-Harness deps (vision + input control).
# Note: ultralytics pulls in torch (~2GB); opencv-python-headless avoids the
# system libGL runtime. Add `easyocr` yourself if you need OCR on non-macOS.
gui = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "ultralytics>=8.3.0",
    "requests>=2.31.0",
]
channels = [
    # WeChat (iLink bot) QR login renders a QR code in the terminal
    # from the server-provided URL. Pure Python, tiny. No Pillow
    # needed for print_ascii() rendering.
    "qrcode>=7.0",
    # Discord channel bot.
    "discord.py>=2.3.0",
    # Slack Socket Mode bot.
    "slack_sdk>=3.27.0",
]
# Browser automation tool (tools/browser). After `pip install`, also
# run `playwright install chromium` to fetch the browser binary
# (~150MB, into ~/Library/Caches/ms-playwright/ on macOS).
browser = [
    "playwright>=1.45.0",
]
# `agent_browser` tool — LLM-friendly ariaSnapshot + ref-id interface.
# Pure Python (subprocess wrapper); the npm package itself is the
# install step. After `pip install`, also run:
#   npm install -g agent-browser
#   agent-browser install
agent-browser = []
# Stealth-patched browser backends for sites with bot protection
# (Cloudflare Turnstile, DataDome, etc.). After install also run
# `patchright install chromium` and/or `camoufox fetch`.
browser-stealth = [
    "playwright>=1.45.0",
    "patchright>=1.40",
    "camoufox>=0.4.0",
]
all = [
    # LLM providers
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    # GUI harness
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "ultralytics>=8.3.0",
    "requests>=2.31.0",
    # Channels
    "qrcode>=7.0",
    "discord.py>=2.3.0",
    "slack_sdk>=3.27.0",
    # Browser tool (run `playwright install chromium` after install)
    "playwright>=1.45.0",
]

[project.scripts]
openprogram = "openprogram.cli:main"

[project.urls]
Homepage = "https://github.com/Fzkuji/OpenProgram"
Repository = "https://github.com/Fzkuji/OpenProgram"
Documentation = "https://github.com/Fzkuji/OpenProgram/tree/main/docs"

[tool.setuptools.packages.find]
include = ["openprogram*"]
exclude = [
    "openprogram.programs.applications.GUI-Agent-Harness*",
    "openprogram.programs.applications.Research-Agent-Harness*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: real-subprocess integration tests (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow'"
