[build-system]
requires = ["setuptools>=68,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openprogram"
version = "0.4.0"
description = "The Open Source Agent Harness Framework. Any LLM. Any platform. Agentic Programming Paradigm."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Fzkuji"},
]
keywords = ["llm", "agentic", "agentic-programming", "ai", "function", "decorator", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # Used by `openprogram providers setup` / `login` for an interactive
    # arrow-key menu. Falls back to plain input() when not installed,
    # so this is officially optional — installing openprogram without
    # extras still works, just with a flatter prompt.
    "questionary>=2.0.0",
    # TUI for `openprogram` — Textual drives the full-screen chat
    # interface (sidebar + scrollback + command palette). Falls
    # through to the Rich-based REPL when TUI is unavailable.
    "textual>=0.80",
    # Web UI is a first-class entry point alongside the TUI (the
    # whole platform pitch is "TUI or browser, same backend"), so the
    # FastAPI/uvicorn/websockets stack ships with the core package
    # instead of being a `[web]` extra. Keeps `pip install openprogram`
    # a single line on the landing page.
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    # Semantic + lexical code search (tree-sitter chunks +
    # Model2Vec static embeddings + BM25). Powers the `semble_search`
    # and `semble_find_related` tools. CPU-only, no API keys.
    "semble>=0.2.0",
    # PKCE OAuth login (used by `openprogram providers login` against
    # ChatGPT/Codex, Anthropic, etc.) starts a localhost callback
    # server to receive the redirect. Implementation lives in
    # ``openprogram.auth.methods.pkce_oauth`` and uses ``aiohttp.web``.
    # Was previously a lazy import that raised "Install with: pip
    # install aiohttp" at login time — moved into base deps so the
    # ChatGPT subscription flow works out of the box.
    "aiohttp>=3.9.0",
    # Model Context Protocol Python SDK. ``webui/routes/mcp.py`` does
    # ``from mcp.types import ...`` at module top, which is reached
    # during FastAPI app construction. Without this dep,
    # ``/api/providers/list`` (and the whole MCP page) raise
    # ``ModuleNotFoundError: No module named 'mcp'`` and the LLM
    # Providers settings panel renders empty. MCP is also a headline
    # feature of OpenProgram, not an optional extra.
    "mcp>=1.0.0",
    # ── LLM provider SDKs ─────────────────────────────────────────
    # The transport for every provider routes through just these three
    # wire SDKs: Anthropic Messages (anthropic — used by anthropic AND
    # third-party anthropic-wire providers like minimax / kimi / vercel),
    # OpenAI (openai — used by openai AND every openai-compatible
    # provider), and Google. "Any LLM" is the product pitch, so these
    # ship with the core package — installed by default, no separate
    # extra. Otherwise picking a provider in the UI works but the first
    # turn raises ``No module named 'anthropic'``.
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    # ── Imported at module load on core paths ─────────────────────
    # These are unguarded top-level imports reached during normal
    # startup / CLI use, so a base install MUST carry them or the import
    # itself tracebacks (not a graceful "install the extra" message):
    #   typer    — the ``openprogram providers`` CLI (providers/cli.py)
    #   PyYAML   — skill / command frontmatter parsing (commands/)
    #   requests — channel transport + misc HTTP
    #   httpx    — the MCP client + provider SDKs' HTTP layer
    #   pydantic — agent/types + FastAPI models (also a FastAPI dep, but
    #              used directly so we pin it explicitly)
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
# The LLM SDKs (anthropic / openai / google-genai) and the web stack are
# in the base `dependencies` above — installed by default, no separate
# provider extra. ``web`` / ``visualize`` stay as no-op markers because
# old install lines referenced them; there is intentionally no
# ``[anthropic]`` / ``[openai]`` / ``[gemini]`` extra.
web = []
visualize = []
# Runtime deps for the GUI program (gui_agent / gui_harness). The
# NOTE: the agentic *programs* (gui / research / wiki harnesses) no
# longer have extras here. Each harness is self-describing — its own
# pyproject.toml declares its third-party deps, and ``openprogram
# programs install <name>`` clones it and ``pip install``s the clone, so
# its deps come from the harness, not from OpenProgram. OpenProgram does
# not carry per-harness dependencies.
channels = [
    # WeChat (iLink bot) QR login renders a QR code in the terminal
    # from the server-provided URL. Pure Python, tiny. No Pillow
    # needed for print_ascii() rendering.
    "qrcode>=7.0",
    # Discord channel bot.
    "discord.py>=2.3.0",
    # Slack Socket Mode bot.
    "slack_sdk>=3.27.0",
]
# Browser automation tool (tools/browser). After `pip install`, also
# run `playwright install chromium` to fetch the browser binary
# (~150MB, into ~/Library/Caches/ms-playwright/ on macOS).
browser = [
    "playwright>=1.45.0",
]
# `agent_browser` tool — LLM-friendly ariaSnapshot + ref-id interface.
# Pure Python (subprocess wrapper); the npm package itself is the
# install step. After `pip install`, also run:
#   npm install -g agent-browser
#   agent-browser install
agent-browser = []
# Stealth-patched browser backends for sites with bot protection
# (Cloudflare Turnstile, DataDome, etc.). After install also run
# `patchright install chromium` and/or `camoufox fetch`.
browser-stealth = [
    "playwright>=1.45.0",
    "patchright>=1.40",
    "camoufox>=0.4.0",
]
all = [
    # LLM provider SDKs are in base `dependencies` now — not repeated here.
    # Channels
    "qrcode>=7.0",
    "discord.py>=2.3.0",
    "slack_sdk>=3.27.0",
    # Browser tool (run `playwright install chromium` after install)
    "playwright>=1.45.0",
    # NOTE: agentic programs (gui/research/wiki) are NOT here — they're
    # installed via ``openprogram programs install <name>``, which pulls
    # each harness's own declared deps. See the note by ``channels``.
]

[project.scripts]
openprogram = "openprogram.cli:main"

[project.urls]
Homepage = "https://github.com/Fzkuji/OpenProgram"
Repository = "https://github.com/Fzkuji/OpenProgram"
Documentation = "https://github.com/Fzkuji/OpenProgram/tree/main/docs"

[tool.setuptools.packages.find]
include = ["openprogram*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: real-subprocess integration tests (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow'"
